# PickingPoint

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  link.txt
assets/depth/: 0053.exr
assets/depth_masked/: bin_mask_1.exr  bin_mask_13.exr  bin_mask_4.exr  bin_mask_6.exr
assets/depth_masked/0053/: 0053_mask_0.exr  0053_mask_10.exr  0053_mask_11.exr  0053_mask_12.exr  0053_mask_3.exr  0053_mask_5.exr  0053_mask_7.exr  0053_mask_8.exr  0053_mask_9.exr
assets/depth_masked/black_0/: black_0_mask_0.exr  black_0_mask_1.exr  black_0_mask_10.exr  black_0_mask_11.exr  black_0_mask_12.exr  black_0_mask_13.exr  black_0_mask_14.exr  black_0_mask_2.exr  black_0_mask_3.exr  black_0_mask_4.exr  black_0_mask_5.exr  black_0_mask_6.exr  black_0_mask_7.exr  black_0_mask_8.exr  black_0_mask_9.exr
assets/depth_masked/paper_h_0/: paper_h_0_mask_0.exr  paper_h_0_mask_1.exr  paper_h_0_mask_10.exr  paper_h_0_mask_11.exr  paper_h_0_mask_12.exr  paper_h_0_mask_13.exr  paper_h_0_mask_2.exr  (+7 more)
assets/seg_real_ds/: annotations2mask.py  black_0.txt  paper_h_0.txt  paper_h_1.txt  paper_l_0.txt  paper_l_4.txt  wood_h_0.txt  wood_h_13.txt  wood_h_18.txt  wood_l_0.txt  wood_l_5.txt  wood_l_8.txt
include/: displayimage.hpp  pickingPoint.hpp  rotationFinder.hpp  timer.hpp
install/: local_setup.sh  setup.sh
log/: latest_build
src/: displayimage.cpp  entryPoint.cpp  entrypoint.cpp  pickingPoint.cpp  rotationFinder.cpp  timer.cpp
utils/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  generateDepthMasked.cpp
(+209 files in other folders)
